--- a/esse.html
+++ b/esse.html
@@ -57,33 +57,8 @@
 			<br>
 			<details class="screenshot">
  <summary class="summarytitle">СОСТАВ СБОРКИ</summary> 
-<p>В списке присутствуют моды, которые использовались при создании сборки. Некоторые полностью, из некоторых могла быть взята одна текстура или параметр либо произведены значительные правки и т. п.</p>
+<p>В списке присутствуют моды, которые использовались при создании сборки.</p>
 	<br>
-			<details>
-	
-
- <summary>Официальные плагины и основные патчи</summary>  
-  <ul>
- <li>SURVIVAL 1.0 от Bethesda Game Studios</li>
- <li>Divine Crusader от Bethesda Game Studios</li>
- <li>Plague of the Dead от Bethesda Game Studios</li>
- <li>Chrysamere от Bethesda Game Studios</li>
- <li>Ruins Edge от Bethesda Game Studios</li>
- <li>Staff of Sheogorath от Bethesda Game Studios</li>
- <li>Stendarrs Hammer от Bethesda Game Studios </li> 
- <li>Arcane Archer от Bethesda Game Studios</li> 
- <li>Arcane Accessories от Bethesda Game Studios</li> 
- <li>Lord's Mail от Bethesda Game Studios</li> 
- <li>Dwarven Armored Mudcrab от Bethesda Game Studios</li> 
- <li>Unofficial Skyrim Special Edition Patch 4.1.2a от Unofficial Patch Project Team</li> 
- <li>Unofficial Skyrim Survival Patch 2.9 от garthand</li> 
- <li>Unofficial Creation Club Updates - October Pack v1.1d от Joseph Russell</li> 
- <li>Unofficial Creation Club Updates - Dwarven Armored Mudcrab 1.1 от Joseph Russell</li> 
- <li>Unofficial Creation Club Updates - Lord's Mail 1.0 от Joseph Russell</li>  
-</ul>    
-</details>
-
-
 <details >
  <summary>Расширения движка</summary>  
   <ul>
@@ -98,11 +73,16 @@
 <details >
  <summary>Исправления, оптимизация и т.п.</summary> 
    <ul>
-<li>Russian Textures and Console Font Fix 1.0 TERAB1T</li>
+<li>Unofficial Skyrim Special Edition Patch 4.1.3b от Unofficial Patch Project Team</li>
+<li>Russian Localization - Fixes and Adds 1.05 от death7lord</li>
+<li>TruBy9 UltraWide - SkyrimSE 1.0.1 от ZaliaS>
 <li>Simply Optimized Textures for SSE 1.0 от Abendaron</li>
 <li>Indistinguishable Billboards for Skyrim SE 1.0 от PaleRiderx</li>
 <li>Weapons and Armor Fixes Remade 5.3 от kryptopyr</li>
 <li>Clothing and Clutter Fixes 1.7 от kryptopyr</li>
+<li>Unofficial Skyrim Modder's Patch - USMP 1.1 от The Community</li>  
+<li>Unofficial Skyrim SE Fixes 0.4.1 от RX310</li>
+	   
 <li>Skyrim Project Optimization SE 1.2 от Pritster5/rgabriel15</li>
 <li>HearthFires Display Case Fix SE 1.0 от RealPuPpEt</li>
 <li>Flora Respawn Fix SE 2.1.3 от bluedanieru</li>
@@ -125,7 +105,6 @@
 <li>No Fall Damage Eorlund Gray-Mane 1.01 от Void123</li>
 <li>Don't Talk With Your Mouth Full 1.0 от Whitefang37</li>
 <li>Clairvoyance Bug Fix Final от DeathMetalHHH</li>
-<li>Gauldur Amulet Fix 0.2 от deLooney</li>
 <li>Enchanting Price Bug Fix SSE 1.0 от Skepmanmods</li>
 <li>College Boots on Corpse 1.0 от thefinn</li>
 <li>DA14 A Night to Remember blackout fix 1 от mrjentipede</li>
@@ -134,44 +113,60 @@
 <li>Helgen Keep Gap Fix and Added Torch 1.0 от morogoth35</li>
 <li>Mannequin AI Fix (Complements USLEEP) 1.0 от Telamont</li>
 <li>Physics Impact Damage Fix 1.1 от flexcreator</li>
-<li>NARC - No Animals Report Crimes 1.2 от Pharros</li>
+<li>NARC Remade - No Animals Report Crimes for Skyrim SE 1.01 от Pharros</li>
 <li>Bigger Pelagius' Hip Bone 1.1 от Gojirex</li>
 <li>DLC2 Deor and Fanari stuck scene fix 1.1 от dailyplanet</li>
 <li>Riften Mausoleum corner mesh collision fix 1 от unblest</li>
 <li>A fix for Staff of Magnus 1.0 от Reficule</li>
 <li>Hall of Attainment - Save Barrels 1.0 от Doronir</li>
 <li>USSEP Necromage fix 1.0.1 от KurodaAkira</li>
-<li>USLEEP Werewolf fix 0.1 от JamesThparker</li>
 <li>Glass Sword Seam Fix 1.0 от Nightscrawl</li>
 <li>Silverware normal map fix от dpillari</li>
 <li>Whiterun texture memory usage reduction 1.1 от DDVIL</li>
 <li>Your zombies won't turn to ash after a loading screen 1.0 Axonis</li>
 <li>Underforge Backdoor 1 от SingABrightSong</li>
 <li>Summoned Werewolves Attack Everything 1.0 от Ronolus</li>
-<li>Unofficial Skyrim Modder's Patch - USMP 1.1 от The Community</li>
 <li>Whiterun Warmaiden Shadow Fix 1 от zaty1</li>
 <li>Archmage Privacy 1.0 от mluppov</li>
 <li>Plant Yellow Mountain Flowers 1.0 от someshta</li>
 <li>Windhelm Snow Fix 3 от Wilserien</li>
 <li>Hearthfire Homes Dont Respawn 0.5 от Kallale</li>
-<li>Improved Hearthfire Lighting SE 1.1 от Scrabbulor</li>
 <li>Rock fixes for Skyrim 1.4.1 от Laacis2</li>
 <li>No stretching 2.2 от langley</li>
 <li>Blacksmith Forge Water Fix - Special Edition 1.0.4 от Eli Valenti</li>
 <li>Stonewall Fixes 1.0 от Dawnx2</li>
 <li>The Ruffled Feather - Mod Collection 4.2.2 от OpticShooter (Vanilla Females Booty Band-Aid)</li>
 <li>Snow Shader Fix 1.1 от JTT</li>
-<li>Vanilla Females Booty Band-Aid (из The Ruffled Feather - Mod Collection 4.2.2 от OpticShooter) </li>
-<li>Unofficial Skyrim SE Fixes 0.4.1 от RX310</li>
 <li>Like A Moss - Whiterun Moss Fix 1.0 от arronus </li>
 <li>Eye Normal Map Fix SSE 1SE от Mr.Dave</li>
 <li>Skyrim Performance PLUS 2 от Vergis</li>
 <li>Chicken Butthurt Minimizer AKA Immersive Eggs 1.0D от ShinGouki</li>
 <li>Culling data glitch fix 1.0 от Nico coiN</li>
-<li>Classic Start Menu - No Creation Club - No Mods Menu 1 от t65x	</li>	
+<li>Clean Menu 1.3 от Wiro</li>	
+<li>Loadscreen Art Boy Model Fix 1.0 от Skybroom</li>
+<li>Unearthed Quest Ralis Sedarys Fix 0.1 от unblest</li>
+<li>Sigil Stone Fix 1.0 от Buttmann69</li>
+<li>Shadowcloak of Nocturnal Bug Fix 1.0 от esuriddick</li>
+<li>Elemental Fury Fix 2.0 от tesnexus8</li>
+<li>Charge Dialogue Fix 1.1 от Whitefang37</li>
+<li>No Sneak Screams 1.0 от Whitefang37</li>
+<li>Hunters Not Bandits 3.1 от raccoondance</li>
+<li>StendarrAuraFix от cheandr</li>
+<li>Bound Weapon Audio Fix 1.2 от CyberRumor</li>
+<li>Battle Cry Fix 1 от NTense</li>
+<li>Lakeview Manor Purchase Fix Patch 1.1 от SkulleR</li>
+<li>Stop Afflicted Refugee Encounters 1.0 от oblivionated1</li>
+<li>Sound Hammering Sounds 1.0 от sialivi</li>
+<li>Drunk Sinking Head Idle Fix 1 от KnightRangersGuild</li>
+<li>Balanced Necromage Fix 1.0 от sevencardz</li>
+<li>Dragonborn Twin Souls Perk Fix Final от KahjiitRaj</li>
+<li>Return to Grace Fix 1.0 от Ritaku</li>
+<li>Dragonrend No Resist 1 от aaa</li>
 </ul> 
 </details>
 </details>
+			
+			<!-- Скрины
 			<br>
 			<details class="screenshot"><summary  class="summarytitle">СКРИНШОТЫ (с ENB)</summary>
                   <img class="screenshot" src="images/ESSE_screenshots/01.jpg" />
@@ -186,6 +181,7 @@
 </details>
 <br>
 <details class="screenshot">
+-->
 			<summary class="summarytitle">ПАНЕЛЬ УПРАВЛЕНИЯ</summary>
 			<img class="screenshot" src="images/ECPU_screenshots/1.jpg" />
 			<img class="screenshot" src="images/ECPU_screenshots/2.jpg" />
