--- a/esse.html
+++ b/esse.html
@@ -62,9 +62,10 @@
 <details >
  <summary>Расширения движка</summary>  
   <ul>
- <li>ENBSeries v0.330 от Бориса Воронцова</li>
- <li >Skyrim Script Extender (SKSE) 2.0.6 от ianpatt, behippo, scruggsywuggsy the ferret, and purple lunchbox</li>
- <li>Achievements Mods Enabler 1.0.0.9 от xSHADOWMANx</li>
+ <li>ENBSeries v0.345 от Бориса Воронцова</li>
+ <li >Skyrim Script Extender (SKSE) 2.0.7 от ianpatt, behippo, scruggsywuggsy the ferret, and purple lunchbox</li>
+ <li>Achievements Mods Enabler 1.0.1.0 от xSHADOWMANx</li>
+<li>SSE Engine Fixes (skse64 plugin) 2.9.1.5.39 от aers</li>
  
 </ul>    
 </details>
@@ -180,8 +181,9 @@
 
 </details>
 <br>
-<details class="screenshot">
 -->
+<details class="screenshot">
+
 			<summary class="summarytitle">ПАНЕЛЬ УПРАВЛЕНИЯ</summary>
 			<img class="screenshot" src="images/ECPU_screenshots/1.jpg" />
 			<img class="screenshot" src="images/ECPU_screenshots/2.jpg" />
