--- a/esse.html
+++ b/esse.html
@@ -76,14 +76,13 @@
    <ul>
 <li>Unofficial Skyrim Special Edition Patch 4.1.3b от Unofficial Patch Project Team</li>
 <li>Russian Localization - Fixes and Adds 1.05 от death7lord</li>
-<li>TruBy9 UltraWide - SkyrimSE 1.0.1 от ZaliaS>
+<li>TruBy9 UltraWide - SkyrimSE 1.0.1 от ZaliaS</li>
 <li>Simply Optimized Textures for SSE 1.0 от Abendaron</li>
 <li>Indistinguishable Billboards for Skyrim SE 1.0 от PaleRiderx</li>
 <li>Weapons and Armor Fixes Remade 5.3 от kryptopyr</li>
 <li>Clothing and Clutter Fixes 1.7 от kryptopyr</li>
 <li>Unofficial Skyrim Modder's Patch - USMP 1.1 от The Community</li>  
-<li>Unofficial Skyrim SE Fixes 0.4.1 от RX310</li>
-	   
+<li>Unofficial Skyrim SE Fixes 0.4.1 от RX310</li>	   
 <li>Skyrim Project Optimization SE 1.2 от Pritster5/rgabriel15</li>
 <li>HearthFires Display Case Fix SE 1.0 от RealPuPpEt</li>
 <li>Flora Respawn Fix SE 2.1.3 от bluedanieru</li>
@@ -189,6 +188,12 @@
 			<img class="screenshot" src="images/ECPU_screenshots/2.jpg" />
 			</details>
 	</div>
+		<details class="screenshot">
+
+			<summary class="summarytitle">ПАНЕЛЬ УПРАВЛЕНИЯ</summary>
+			<img class="screenshot" src="images/ECPU_screenshots/1.jpg" />
+			<img class="screenshot" src="images/ECPU_screenshots/2.jpg" />
+			</details>
 	<br>
 	<br>
 	<br>
