--- a/esse.html
+++ b/esse.html
@@ -190,9 +190,9 @@
 	</div>
 		<details class="screenshot">
 
-			<summary class="summarytitle">ПАНЕЛЬ УПРАВЛЕНИЯ</summary>
-			<img class="screenshot" src="images/ECPU_screenshots/1.jpg" />
-			<img class="screenshot" src="images/ECPU_screenshots/2.jpg" />
+			<summary class="summarytitle">FAQ</summary>
+			1. В: Wrye Bash красным показывает отсутсвие файлов локализации.
+		 	   О: Они запакованы, так и должно быть.
 			</details>
 	<br>
 	<br>
