--- a/esse.html
+++ b/esse.html
@@ -69,7 +69,18 @@
  
 </ul>    
 </details>
+<details class="screenshot">
 
+			<summary class="summarytitle">УСТАНОВКА</summary>
+			<p>
+			0. Установить последние Visual V++ Redistributable, DirectX, .NET Framework.
+				<br>
+			1. Распаковать сборку в любое место.
+				<br>
+		 	2. Заупстить панель управления (папка Control Panel, файл ECPU.exe) и выполнить сброс настроек.
+				3. Можно запускать игру либо через панель управления, либо через skse64_loader.exe.
+			</p>
+			</details>
 
 <details >
  <summary>Исправления, оптимизация и т.п.</summary> 
@@ -193,6 +204,7 @@
 			<summary class="summarytitle">FAQ</summary>
 			<p>
 			1. В: Wrye Bash красным показывает отсутсвие файлов локализации.
+				<br>
 		 	   О: Они запакованы, так и должно быть.
 			</p>
 			</details>
