--- a/esse.html
+++ b/esse.html
@@ -87,7 +87,7 @@
  
 </ul>    
 </details>
-
+<details >
  <summary>Исправления, оптимизация и т.п.</summary> 
    <ul>
 <li>Unofficial Skyrim Special Edition Patch 4.1.3b от Unofficial Patch Project Team</li>
