--- a/esse.html
+++ b/esse.html
@@ -212,6 +212,12 @@
 				<br>
 		 	   О: Они запакованы, так и должно быть.
 			</p>
+			<br>
+			<p>
+			2. В: Фикс для ультра-широких мониторов?.
+				<br>
+		 	   О: Панель управления --> Порядок загрузки. Включить TruBy9.esp
+			</p>
 			</details>
 	<br>
 	<br>
