--- a/esse.html
+++ b/esse.html
@@ -214,10 +214,18 @@
 			</p>
 			<br>
 			<p>
-			2. В: Фикс для ультра-широких мониторов?.
+			2. В: Фикс для ультра-широких мониторов?
 				<br>
 		 	   О: Панель управления --> Порядок загрузки. Включить TruBy9.esp
 			</p>
+			<br>
+			<p>
+			3. В: Как отправить миллион долларов автору на поддержку сборки и в благодарность?
+				<br>
+		 	   О: Номер карты: 67 61 9600 0090669822
+				Сбербанк (Россия)
+			</p>			
+
 			</details>
 	<br>
 	<br>
