--- a/esse.html
+++ b/esse.html
@@ -29,6 +29,12 @@
 
 	<main class="content">
 		<a name="top"></a>
+		
+		
+		<center>	<img  src="images/miriam.png" /></img>
+			<img  src="images/bee.png" /></img></center>
+		
+		
 		<div >
 		<h1>ESSE - VV (Elderscrollerr's Skyrim Special Edition — Vanilla Version)</h1>
 		
