--- a/esse.html
+++ b/esse.html
@@ -58,7 +58,7 @@
 
 Сборка будет интересна тем, кто хочет получить оригинальную игру, но исправленную и оптимизированную без отхода от концепций геймплея, арт-дизайна, лора и сюжета.
 
-Данная сборка будет являться основой для второй сборки, расширяющей игру.
+Для ESSE-VV онлайн-обновления делать не планируется. Данная сборка будет являться основой для второй сборки, расширяющей игру.
 			</p>
 			<p>Для сборки разработана панель управления, расширяющая функционал стандартного лаунчера и добавляющая новые настройки и утилиты, в том числе онлайн-обновления. Обновления работают для текущей версии, с помощью онлайн-обновления нельзя перейти на следующую версию.</p>
 			
