--- a/esse.html
+++ b/esse.html
@@ -73,7 +73,7 @@
 				<br>
 			1. Распаковать сборку в любое место.
 				<br>
-		 	2. Заупстить панель управления (папка Control Panel, файл ECPU.exe) и выполнить сброс настроек.
+		 	2. Запустить панель управления (папка Control Panel, файл ECPU.exe) и выполнить сброс настроек.
 				3. Можно запускать игру либо через панель управления, либо через skse64_loader.exe.
 			</p>
 			</details>
@@ -232,8 +232,20 @@
 				<br>
 		 	   О: Номер карты: 67 61 9600 0090669822
 				Сбербанк (Россия)
-			</p>			
-
+			</p>
+			<br>
+			<p>
+			1. В: Wrye Bash красным показывает отсутсвие файлов локализации.
+				<br>
+		 	   О: Они запакованы, так и должно быть.
+			 В: Как поставить на сборку мод, требующий неоф. патча?
+			<br>
+			    О: Воспользоваться утилитой Wrye Bash и в списке мастер-файло у мода поменять Unofficial Skyrim Special Edition Patch.esp
+				на ESSEVV.esp.
+				Не переименовывайте ESSEVV.esp в Unofficial Skyrim Special Edition Patch.esp, иначе вам придется генерировать seq-файл.
+			
+			Unofficial Skyrim Special Edition Patch.esp
+			</p>
 			</details>
 	<br>
 	<br>
