--- a/esse.html
+++ b/esse.html
@@ -237,9 +237,10 @@
 			<p>
 			    В: Как поставить на сборку мод, требующий неоф. патча?
 			<br>
-			    О: Воспользоваться утилитой Wrye Bash и в списке мастер-файло у мода поменять Unofficial Skyrim Special Edition Patch.esp
+			    О: Воспользоваться утилитой Wrye Bash и в списке мастер-файлов у мода поменять Unofficial Skyrim Special Edition Patch.esp
 				на ESSEVV.esp.
-				Не переименовывайте ESSEVV.esp в Unofficial Skyrim Special Edition Patch.esp, иначе вам придется генерировать seq-файл.
+				Не переименовывайте ESSEVV.esp в Unofficial Skyrim Special Edition Patch.esp, иначе вам придется генерировать seq-файл
+				и переименовывать папки, зависящие от названия плагина.
 					
 		</p>
 			</details>
