--- a/esse.html
+++ b/esse.html
@@ -210,25 +210,26 @@
 			<summary class="summarytitle">ПАНЕЛЬ УПРАВЛЕНИЯ</summary>
 			<img class="screenshot" src="images/ECPU_screenshots/1.jpg" />
 			<img class="screenshot" src="images/ECPU_screenshots/2.jpg" />
+	               <img class="screenshot" src="images/ECPU_screenshots/3.jpg" />
 			</details>
 	</div>
 		<details class="screenshot">
 
 			<summary class="summarytitle">FAQ</summary>
 			<p>
-			1. В: Wrye Bash красным показывает отсутсвие файлов локализации.
+			   В: Wrye Bash красным показывает отсутсвие файлов локализации.
 				<br>
 		 	   О: Они запакованы, так и должно быть.
 			</p>
 			<br>
 			<p>
-			2. В: Фикс для ультра-широких мониторов?
+			   В: Фикс для ультра-широких мониторов?
 				<br>
 		 	   О: Панель управления --> Порядок загрузки. Включить TruBy9.esp
 			</p>
 			<br>
 			<p>
-			3. В: Как отправить миллион долларов автору на поддержку сборки и в благодарность?
+			   В: Как отправить миллион долларов автору на поддержку сборки и в благодарность?
 				<br>
 		 	   О: Номер карты: 67 61 9600 0090669822
 				Сбербанк (Россия)
