--- a/esse.html
+++ b/esse.html
@@ -38,8 +38,8 @@
 		<h1>ESSE - VV (Elderscrollerr's Skyrim Special Edition — Vanilla Version)</h1>
 		<br><br>
 		
-				<center>	<img  src="images/miriam.png" /></img>
-			<img  src="images/bee.png" /></img></center>
+				<center>	<img  src="images/esse-vv.png" /></img>
+			</center>
 	
 	<br>
 			<p>
