--- a/esse.html
+++ b/esse.html
@@ -38,7 +38,7 @@
 		<h1>ESSE - VV (Elderscrollerr's Skyrim Special Edition — Vanilla Version)</h1>
 		<br><br>
 		
-				<center>	<img  src="images/esse-vv.png" /></img>
+				<center>	<img  src="images/esse-vv.jpg" /></img>
 			</center>
 	
 	<br>
