--- a/esse.html
+++ b/esse.html
@@ -96,9 +96,28 @@
 </ul>    
 </details>
 <details >
- <summary>Исправления, оптимизация и т.п.</summary> 
+ <summary>Моды</summary> 
    <ul>
+<li>SURVIVAL 1.0 от Bethesda Game Studios</li>
+<li>Divine Crusader от Bethesda Game Studios</li>
+<li>Plague of the Dead от Bethesda Game Studios</li>
+<li>Chrysamere от Bethesda Game Studios</li>
+<li>Ruins Edge от Bethesda Game Studios</li>
+<li>Staff of Sheogorath от Bethesda Game Studios</li>
+<li>Stendarrs Hammer от Bethesda Game Studios</li>
+<li>Arcane Archer от Bethesda Game Studios</li>
+<li>Arcane Accessories от Bethesda Game Studios</li>
+<li>Lord's Mail от Bethesda Game Studios</li>
+<li>Shadowrend от Bethesda Game Studios</li>
+<li>Nix-Hound от Bethesda Game Studios</li>
+<li>Tundra Homestead от Bethesda Game Studios</li>
+<li>Adventurer's Backpack от Bethesda Game Studios</li>
+<li>Camping от Bethesda Game Studios</li>
+<li>Dwarven Armored Mudcrab от Bethesda Game Studios</li>
+<li>------------------------------------------------------------------------</li>	   
 <li>Unofficial Skyrim Special Edition Patch 4.1.3b от Unofficial Patch Project Team</li>
+<li>Unofficial Skyrim Survival Patch 2.9 от garthand</li>
+Unofficial Creation Club Updates - All-In-One 1.2.0 от Joseph Russell
 <li>Russian Localization - Fixes and Adds 1.05 от death7lord</li>
 <li>TruBy9 UltraWide - SkyrimSE 1.0.1 от ZaliaS</li>
 <li>Simply Optimized Textures for SSE 1.0 от Abendaron</li>
@@ -184,6 +203,7 @@
 <li>Dragonborn Twin Souls Perk Fix Final от KahjiitRaj</li>
 <li>Return to Grace Fix 1.0 от Ritaku</li>
 <li>Dragonrend No Resist 1 от aaa</li>
+<li>Skyrim particle patch for ENB (SE) 03.02.2018 от mindflux</li>
 </ul> 
 </details>
 </details>
