--- a/esse.html
+++ b/esse.html
@@ -117,7 +117,7 @@
 <li>------------------------------------------------------------------------</li>	   
 <li>Unofficial Skyrim Special Edition Patch 4.1.3b от Unofficial Patch Project Team</li>
 <li>Unofficial Skyrim Survival Patch 2.9 от garthand</li>
-Unofficial Creation Club Updates - All-In-One 1.2.0 от Joseph Russell
+<li>Unofficial Creation Club Updates - All-In-One 1.2.0 от Joseph Russell</li>
 <li>Russian Localization - Fixes and Adds 1.05 от death7lord</li>
 <li>TruBy9 UltraWide - SkyrimSE 1.0.1 от ZaliaS</li>
 <li>Simply Optimized Textures for SSE 1.0 от Abendaron</li>
