--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 	
 	
 	<br>
-	<details class="screenshot">
- <summary class="summarytitle">КОНТАКТЫ</summary> 
- <ul>
-			<li> <a href="https://vk.com/skyrim_esse">Группа ВКонтакте</a></li>
-			<li> <a href="https://github.com/elderscrollerr/ECPU">Панель управления sources</a></li>
-			<li> <a href="mailto:elderscrollerr@gmail.com">Почта elderscrollerr@gmail.com</a></li>
-</ul>
 
-			</details>
+			 <a href="https://vk.com/skyrim_esse">Группа ВКонтакте</a>
+			 <a href="https://github.com/elderscrollerr/ECPU">Панель управления sources</a>
+			 <a href="mailto:elderscrollerr@gmail.com">Почта elderscrollerr@gmail.com</a>
+	<a href="https://www.youtube.com/channel/UC29ZxzbDd3XjveBgVRRrkfQ">Youtube</a>
+	<a href="https://www.nexusmods.com/users/33293405">Nexus</a>
+	
+	
+
 	
 	
 	
