--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 	
 	<br>
 
-			 <a href="https://vk.com/skyrim_esse">Группа ВКонтакте</a>
-			 <a href="https://github.com/elderscrollerr/ECPU">Панель управления sources</a>
-			 <a href="mailto:elderscrollerr@gmail.com">Почта elderscrollerr@gmail.com</a>
-	<a href="https://www.youtube.com/channel/UC29ZxzbDd3XjveBgVRRrkfQ">Youtube</a>
-	<a href="https://www.nexusmods.com/users/33293405">Nexus</a>
+			 <a class="content" href="https://vk.com/skyrim_esse">Группа ВКонтакте</a><br>
+			 <a class="content" href="https://github.com/elderscrollerr/ECPU">Панель управления sources</a><br>
+			 <a class="content" href="mailto:elderscrollerr@gmail.com">Почта elderscrollerr@gmail.com</a><br>
+	<a class="content" href="https://www.youtube.com/channel/UC29ZxzbDd3XjveBgVRRrkfQ">Youtube</a><br>
+	<a class="content" href="https://www.nexusmods.com/users/33293405">Nexus</a><br>
 	
 	
 
