--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 	
 	
 	<br>
-
-			 <a class="content" href="https://vk.com/skyrim_esse">Группа ВКонтакте</a><br>
-			 <a class="content" href="https://github.com/elderscrollerr/ECPU">Панель управления sources</a><br>
-			 <a class="content" href="mailto:elderscrollerr@gmail.com">Почта elderscrollerr@gmail.com</a><br>
-	<a class="content" href="https://www.youtube.com/channel/UC29ZxzbDd3XjveBgVRRrkfQ">Youtube</a><br>
-	<a class="content" href="https://www.nexusmods.com/users/33293405">Nexus</a><br>
-	
+<center>
+			<p> <a  href="https://vk.com/skyrim_esse">Группа ВКонтакте</a><br>
+			<p> <a  href="https://github.com/elderscrollerr/ECPU">Панель управления sources</a><br>
+			<p> <a  href="mailto:elderscrollerr@gmail.com">Почта elderscrollerr@gmail.com</a><br>
+	<p><a  href="https://www.youtube.com/channel/UC29ZxzbDd3XjveBgVRRrkfQ">Youtube</a><br>
+	<p><a  href="https://www.nexusmods.com/users/33293405">Nexus</a><br>
+	<center>
 	
 
 	
