--- a/esseev.html
+++ b/esseev.html
@@ -35,7 +35,7 @@
 		
 		
 		<div >
-		<h1>ESSE - VV (Elderscrollerr's Skyrim Special Edition — Vanilla Version)</h1>
+		<h1>ESSE - EV (Elderscrollerr's Skyrim Special Edition — Extended Version)</h1>
 		<br><br>
 		
 				<center>	<img  src="images/esse-ev.jpg" /></img>
@@ -88,13 +88,18 @@
 <details >
  <summary>Графика</summary> 
  <ul>
- RUSTIC CLOTHING 3.0 от Gamwich
+<li>Static Mesh Improvement Mod - SMIM 2.07 от Brumbek</li>
+<li>Ruins Clutter Improved 3.1 от raiserfx</li>
+<li>Majestic Mountains 1.7 от T4GTR34UM3R</li>
 <li>LH's Realistic Field Grass HD 2K-4K 1.0 от LupusHegemonia</li>
 <li>RUSTIC SPRIGGAN - Special Edition 1.0 от Gamwich</li>
 <li>RUSTIC ELDERSCROLL - Special Edition 1.0 от Gamwich</li>
 <li>RUSTIC DEATH HOUND and GARGOYLE - Special Edition 1.1 от Gamwich</li>
 <li>RUSTIC DRAGON CORPSE - Special Edition 1.0 от Gamwich</li>
-<li>CC's HQ Guard Shields SSE 2.0 от ClearanceClarence</li>
+?    <li>CC's HQ Guard Shields SSE 2.0 от ClearanceClarence</li>
+<li>RUSTIC CLOTHING - Special Edition 2.0 от Gamwich</li>
+<li>RUSTIC NOBLE FURNITURE - SSE 1.1 от Gamwich</li>
+<li>RUSTIC COOKING - Special Edition 1.0 от Gamwich</li>
 </ul> 
 </details>
 </details>
