--- a/esse.html
+++ b/esse.html
@@ -203,6 +203,7 @@
 <li>Dragonborn Twin Souls Perk Fix Final от KahjiitRaj</li>
 <li>Return to Grace Fix 1.0 от Ritaku</li>
 <li>Dragonrend No Resist 1 от aaa</li>
+<li>Clothing Show Jewelry Fix 1.2 от softcatsocks</li>
 <li>Skyrim particle patch for ENB (SE) 03.02.2018 от mindflux</li>
 </ul> 
 </details>
