--- a/esse.html
+++ b/esse.html
@@ -204,6 +204,7 @@
 <li>Return to Grace Fix 1.0 от Ritaku</li>
 <li>Dragonrend No Resist 1 от aaa</li>
 <li>Clothing Show Jewelry Fix 1.2 от softcatsocks</li>
+<li>(SKSE64) Havok Fix 2.2 от rezy</li>
 <li>Skyrim particle patch for ENB (SE) 03.02.2018 от mindflux</li>
 </ul> 
 </details>
