--- a/esse.html
+++ b/esse.html
@@ -91,7 +91,8 @@
  <li>ENBSeries v0.345 от Бориса Воронцова</li>
  <li >Skyrim Script Extender (SKSE) 2.0.7 от ianpatt, behippo, scruggsywuggsy the ferret, and purple lunchbox</li>
  <li>Achievements Mods Enabler 1.0.1.0 от xSHADOWMANx</li>
-<li>SSE Engine Fixes (skse64 plugin) 2.9.1.5.39 от aers</li>
+<li>SSE Engine Fixes (skse64 plugin) 2.9.1.5.39 от aers</li>	  
+<li>(SKSE64) Havok Fix 2.2 от rezy</li>
  
 </ul>    
 </details>
@@ -204,7 +205,7 @@
 <li>Return to Grace Fix 1.0 от Ritaku</li>
 <li>Dragonrend No Resist 1 от aaa</li>
 <li>Clothing Show Jewelry Fix 1.2 от softcatsocks</li>
-<li>(SKSE64) Havok Fix 2.2 от rezy</li>
+<li>Shadowcloak of Nocturnal Bug Fix 1.0 от esuriddick</li>
 <li>Skyrim particle patch for ENB (SE) 03.02.2018 от mindflux</li>
 </ul> 
 </details>
