--- a/esse.html
+++ b/esse.html
@@ -116,7 +116,7 @@
 <li>Camping от Bethesda Game Studios</li>
 <li>Dwarven Armored Mudcrab от Bethesda Game Studios</li>
 <li>------------------------------------------------------------------------</li>	   
-<li>Unofficial Skyrim Special Edition Patch 4.1.3b от Unofficial Patch Project Team</li>
+<li>Unofficial Skyrim Special Edition Patch 4.1.4 от Unofficial Patch Project Team</li>
 <li>Unofficial Skyrim Survival Patch 2.9 от garthand</li>
 <li>Unofficial Creation Club Updates - All-In-One 1.2.0 от Joseph Russell</li>
 <li>Russian Localization - Fixes and Adds 1.05 от death7lord</li>
@@ -207,6 +207,13 @@
 <li>Clothing Show Jewelry Fix 1.2 от softcatsocks</li>
 <li>Shadowcloak of Nocturnal Bug Fix 1.0 от esuriddick</li>
 <li>Skyrim particle patch for ENB (SE) 03.02.2018 от mindflux</li>
+<li>Better Textures - Vanilla Trees 1.1.5 от Danilling</li>
+<li>More Salt Please 1.5 от jimmybob</li>
+<li>Wiseman303's Flora Fixes 2.01 от wiseman303</li>
+<li>Wiseman303's Critter Fixes 1.06 от wiseman303</li>
+<li>Wiseman303's Shahvee Fix 1.0 от wiseman303</li>
+<li>Dawnguard lava imagespace duration fix 1.0 от jss2a98aj</li>
+<li>_bugoviste 1.1c от Mizera Mizar</li>
 </ul> 
 </details>
 </details>
@@ -226,6 +233,9 @@
 </details>
 <br>
 -->
+		
+		
+		<!--
 <details class="screenshot">
 
 			<summary class="summarytitle">ПАНЕЛЬ УПРАВЛЕНИЯ</summary>
@@ -234,6 +244,8 @@
 	               <img class="screenshot" src="images/ECPU_screenshots/3.jpg" />
 			</details>
 	</div>
+
+-->
 		<details class="screenshot">
 
 			<summary class="summarytitle">FAQ</summary>
